Atualizações no dashboard do aluno